--- a/style.css
+++ b/style.css
@@ -101,3 +101,14 @@ li {
 .col1 {
     float: left;
 }
+
+   @media (min-width: 680px) {
+        body {
+            height: 100%;
+        }
+        .container {
+            width: 100%;
+            height: 60vh;
+            margin-top: 20vh;
+        }
+    }
