--- a/style.css
+++ b/style.css
@@ -1,114 +1,107 @@
-body {
-    background-color: #ffeaa7;
-    padding: 1rem;
-    box-sizing: border-box;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: hsl(198, 1%, 29%);
-    font-family: "Architects Daughter", cursive;
-    text-align: center;
-    font-size: 130%;
-}
-
-.container {
-    width: 100%;
-    height: auto;
-    min-height: 500px;
-    max-width: 900px;
-    min-width: 450px;
-    background: #f1f5f8;
-    background-size: 25px 25px;
-    border-radius: 20px;
-    box-shadow: 5px 4px 8px 3px #00000040;
-    padding: 1rem;
-    box-sizing: border-box;
-}
-
-.heading {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 1rem;
-}
-
-.heading h1 {
-    transform: rotate(2deg);
-    padding: 0.2rem 1.2rem;
-    border-radius: 20% 5% 20% 5%/5% 20% 25% 20%;
-    background-color: #fdcb6e;
-    font-size: 1.5rem;
-}
-
-.form input {
-    box-sizing: border-box;
-    background-color: transparent;
-    padding: 0.7rem;
-    border-bottom-right-radius: 15px 3px;
-    border-bottom-left-radius: 3px 15px;
-    border: solid 3px transparent;
-    border-bottom: dotted 3px #fdcb6e;
-    font-family: "Architects Daughter", cursive;
-    font-size: 1rem;
-    color: hsla(260, 2%, 25%, 0.7);
-    width: 60%;
-    margin-bottom: 20px;
-}
-
-.button1 {
-    padding: 0;
-    border: none;
-    font-family: "Architects Daughter", cursive;
-    text-decoration: none;
-    padding-bottom: 5px;
-    border-radius: 5px;
-    background-color: #ffeaa7;
-}
-
-.button1:hover {
-    cursor: pointer;
-}
-
-.button1 span {
-    background: #f1f5f8;
-    display: block;
-    padding: 0.5rem 1rem;
-    padding-bottom: 2px;
-    border-radius: 5px;
-}
-
-.button2 {
-    background-color: #fff;
-    border: solid 1px #ffeaa7;
-    border-radius: 25%;
-    cursor: pointer;
-    padding: 5px 10px;
-}
-
-li {
-    text-align: left;
-    position: relative;
-    padding: 0.5rem;
-    width: 50%;
-}
-
-.listItem {
-    display: inline;
-    display: grid;
-    grid-template-columns: 4fr 1fr 1fr;
-}
-
-.col1 {
-    float: left;
-}
-
-   @media (min-width: 680px) {
-        body {
-            height: 100%;
-        }
-        .container {
-            width: 100%;
-            height: 60vh;
-            margin-top: 20vh;
-        }
+    body {
+        background-color: #ffeaa7;
+        height: 80vh;
+        overflow: hidden;
+        box-sizing: border-box;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: hsl(198, 1%, 29%);
+        font-family: "Architects Daughter", cursive;
+        text-align: center;
+        font-size: 130%;
+    }
+    
+    .container {
+        width: 100%;
+        height: auto;
+        min-height: 50vh;
+        max-width: 900px;
+        width: 100%;
+        height: 60vh;
+        min-width: 450px;
+        padding: 0.2rem;
+        margin-top: 10vh;
+        background: #f1f5f8;
+        background-size: 25px 25px;
+        border-radius: 20px;
+        box-shadow: 5px 4px 8px 3px #00000040;
+        box-sizing: border-box;
+    }
+    
+    .heading {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 1rem;
+    }
+    
+    .heading h1 {
+        transform: rotate(2deg);
+        padding: 0.2rem 1.2rem;
+        border-radius: 20% 5% 20% 5%/5% 20% 25% 20%;
+        background-color: #fdcb6e;
+        font-size: 1.5rem;
+    }
+    
+    .form input {
+        box-sizing: border-box;
+        background-color: transparent;
+        padding: 0.7rem;
+        border-bottom-right-radius: 15px 3px;
+        border-bottom-left-radius: 3px 15px;
+        border: solid 3px transparent;
+        border-bottom: dotted 3px #fdcb6e;
+        font-family: "Architects Daughter", cursive;
+        font-size: 1rem;
+        color: hsla(260, 2%, 25%, 0.7);
+        width: 60%;
+        margin-bottom: 20px;
+    }
+    
+    .button1 {
+        padding: 0;
+        border: none;
+        font-family: "Architects Daughter", cursive;
+        text-decoration: none;
+        padding-bottom: 5px;
+        border-radius: 5px;
+        background-color: #ffeaa7;
+    }
+    
+    .button1:hover {
+        cursor: pointer;
+    }
+    
+    .button1 span {
+        background: #f1f5f8;
+        display: block;
+        padding: 0.5rem 1rem;
+        padding-bottom: 2px;
+        border-radius: 5px;
+    }
+    
+    .button2 {
+        background-color: #fff;
+        border: solid 1px #ffeaa7;
+        border-radius: 25%;
+        cursor: pointer;
+        padding: 5px 10px;
+    }
+    
+    li {
+        text-align: left;
+        position: relative;
+        padding: 0.5rem;
+        width: 50%;
+    }
+    
+    .listItem {
+        display: inline;
+        display: grid;
+        grid-template-columns: 4fr 1fr 1fr;
+    }
+    
+    .col1 {
+        float: left;
     }
