--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
         height: 60vh;
         min-width: 450px;
         padding: 0.2rem;
-        margin-top: 10vh;
         background: #f1f5f8;
         background-size: 25px 25px;
         border-radius: 20px;
@@ -104,4 +103,16 @@
     
     .col1 {
         float: left;
+    }
+    
+    @media (min-width: 680px) {
+        .container {
+            width: 100%;
+            min-width: 600px;
+            height: 80vh;
+            margin: 0;
+            padding: 0;
+            margin-top: 20vh;
+            min-width: 450px;
+        }
     }
